# python-bmp-generator

./: .gitignore  README.md  app.py  bmp_info_header.py  pyproject.toml
src/python_bmp_generator/: __init__.py  __main__.py  bmp_header.py  create_bmp.py  create_jpeg.py
tests/: test_create_bmp.py
